# AI

./: .gitignore  CMakeLists.txt  README.md  kdtree.dot  tempCodeRunnerFile.cpp
cmake/: build_doxygen.cmake
cxx_src/: CMakeLists.txt
cxx_src/CSP/: CMakeLists.txt
cxx_src/CSP/include/: CSP.hpp
cxx_src/Core/: CMakeLists.txt
cxx_src/Core/include/: Matrix.h  Matrix1.h  MatrixBase.h  MatrixBase1.h  ModelBase.h  TreeNodeBase.h  core.h  tools.h
cxx_src/Core/src/: tools.cpp
cxx_src/DecisionTree/: CMakeLists.txt
cxx_src/DecisionTree/include/: Attribute.h  DTExample.h  DecisionTreeBuilder.h  DecisionTreeNode.h
cxx_src/DecisionTree/src/: DecisionTree.cpp  DecisionTreeNode.cpp
cxx_src/GeneticAlgorithm/: CMakeLists.txt
cxx_src/GeneticAlgorithm/include/: GA.h
cxx_src/GeneticAlgorithm/src/: GA.cpp
cxx_src/NFigurePuzzle/: CMakeLists.txt
cxx_src/NFigurePuzzle/include/: NFPAlgorithm.h  NFPState.h
cxx_src/NFigurePuzzle/src/: NFPAlgorithm.cpp  NFPState.cpp  NFPStateSet.cpp
cxx_src/test/: CMakeLists.txt
cxx_src/test/CSPTest/: CMakeLists.txt  CSPNQueen.cpp
cxx_src/test/CoreTest/: CMakeLists.txt  coreTest.cpp
cxx_src/test/DecisionTreeTest/: CMakeLists.txt  DecisionTreeTest1.cpp
cxx_src/test/GeneticAlgorithmTest/: CMakeLists.txt  GeneticAlgorithmTest.cpp
cxx_src/test/NFigurePuzzleTest/: CMakeLists.txt  NFigurePuzzleTest1.cpp
docs/: AI.md  BayesianNetwork.md  CSP.md  DT.md  DecisionMaking.md  Doxyfile.in  GeneticAlgorithm.md  ModelEvaluation.md  NearestNeighborSearch.md  句法分析.md  逻辑agent.md
docs/html/: _attribute_8cpp.html  _attribute_8cpp__incl.map  _attribute_8cpp__incl.md5  _attribute_8cpp_source.html  _attribute_8h.html  _attribute_8h.js  _attribute_8h__dep__incl.map  _attribute_8h__dep__incl.md5  _attribute_8h__incl.map  _attribute_8h__incl.md5  _attribute_8h_source.html  _b_d_t_node_8cpp.html  _b_d_t_node_8cpp__incl.map  _b_d_t_node_8cpp__incl.md5  _b_d_t_node_8cpp_source.html  _b_d_t_node_8h.html  _b_d_t_node_8h.js  _b_d_t_node_8h__dep__incl.map  _b_d_t_node_8h__dep__incl.md5  _b_d_t_node_8h__incl.map  _b_d_t_node_8h__incl.md5  _b_d_t_node_8h_source.html  _boolean_decision_tree_8cpp.html  _boolean_decision_tree_8cpp__incl.map  _boolean_decision_tree_8cpp__incl.md5  _boolean_decision_tree_8cpp_source.html  _boolean_decision_tree_8h.html  _boolean_decision_tree_8h.js  _boolean_decision_tree_8h__dep__incl.map  _boolean_decision_tree_8h__dep__incl.md5  _boolean_decision_tree_8h__incl.map  _boolean_decision_tree_8h__incl.md5  _boolean_decision_tree_8h_source.html  _c_s_p1_8cpp.html  _c_s_p1_8cpp__incl.map  _c_s_p1_8cpp__incl.md5  _c_s_p1_8cpp_source.html  _c_s_p_8hpp.html  _c_s_p_8hpp.js  _c_s_p_8hpp__dep__incl.map  (+1032 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  (+81 more)
inc/: ModelBase.h  core.h  core.hpp  demo.h
inc/BN/: BN.h
inc/CSP/: CSP.hpp  NQueen.h  Variable.hpp
inc/DT/: Attribute.h  DTDataset.h  DTExample.h  DecisionTree.h  DecisionTreeBuilder.h  DecisionTreeNode.h
inc/DT/BDT/: BDTDataset.h  BDTExample.h  BDTNode.h  BinaryDecisionTree.h  BooleanDecisionTree.h
inc/GA/: GA.h
inc/ModelEvaluation/: Evaluation.h
inc/NFigurePuzzle/: NFPAlgorithm.h  NFPPosition.h  NFPState.h  NFPStateSet.h
inc/NN/: Linear.h  nn.h
inc/NNSearch/: KDTree.h
inc/YUKII/: Default.h  MatrixBase.h  Position2.h  TreeNodeBase.h  YDefault.h  YMatrix.h  YMatrixBase.h  YPosition2.h  YTensor.h  YTreeNodeBase.h  Ycore.h  Ytools.h  core.h  tools.h
inc/YUKII/data/: Dataset.h  Example.h  YDataset.h  YExample.h
inc/utils/: Position2.h  Tree.hpp  TreeNode.hpp  TreeNodeBase.h  YukiTools.h  core.h
lib/libtorch/: build-hash  build-version
lib/libtorch/include/ATen/: RegistrationDeclarations.h
py/: DecisionTree.py  xgdts.py
py/LiMu/: 总套路.ipynb
py/LiMu/Chapter1/: 数据操作.html  数据操作.ipynb  数据操作.py  数据预处理.py
py/LiMu/Chapter2/: 优化方法.ipynb  线性代数.ipynb  自动求导.ipynb
py/LiMu/Chapter3/: softmax回归.ipynb  softmax回归简洁实现.ipynb  图像分类数字集.ipynb  线性回归.ipynb  线性回归的简洁实现.html  线性回归的简洁实现.ipynb
py/LiMu/Chapter4/: 多层感知机.ipynb  多层感知机2.ipynb
py/LiMu/Chapter5/: 丢弃法.ipynb  权重衰退.ipynb
py/LiMu/autogluon/示例/: data.sh  install.sh  run.ipynb  submissiom.csv
resources/: BDTTrainData.csv  precision.ini
resources/DT/: BDTTrainData.csv  iris.csv  watermelon2.0-test.csv  watermelon2.0-train.csv  watermelon2.0.csv  watermelon3.0-lack.csv  watermelon3.0-num.csv  watermelon3.0.csv
resources/DT/trees/: iris.dot  watermelon2.0-train.dot  watermelon2.0-train_post_cut.dot  watermelon2.0.dot  watermelon3.0-lack.dot  watermelon3.0.dot
src/: core.cpp  main.cpp
src/CSP/: NQueen.cpp
src/DT/: Attribute.cpp  BDTDataset.cpp  DTDataset.cpp  DTExample.cpp  DecisionTree.cpp  DecisionTreeBuilder.cpp  DecisionTreeNode.cpp
src/DT/BDT/: BDTNode.cpp  BooleanDecisionTree.cpp
src/NFigurePuzzle/: NFPAlgorithm.cpp  NFPPosition.cpp  NFPState.cpp  NFPStateSet.cpp
src/YUKII/: Default.cpp  Position2.cpp  core.cpp  tools.cpp
src/utils/: Position2.cpp  YukiTools.cpp
test/: TestCSP.hpp
理论/最优化方法/: 优化问题.ipynb  凸集概念.ipynb
(+33 files in other folders)
